src/ImgGallery/ImgGallery.css
.image-preview{
    position: fixed;
    width: 100vw;
    height: 100vh;
    background-color:rgba(0, 0, 0, 0.90);
    top:0;
    left: 0;
    overflow: hidden;
}

.display-section {
    margin-top: 20vh;
    display: flex;
    justify-content: center;
    align-items: center;    
}

.close {
    color: #fff;
    position: absolute;
    top: 5%;
    right: 5%;
    font-weight: bold;
    font-size: calc(2rem);
}

.masonry-container{
	width: 80%;
	margin: auto;
	margin-top: 10px;
	border: 1px solid rgba(0,0,0,.1);
}
.masonry{
	display: flex;
	flex-direction: row;
	justify-content: center;
	align-content: stretch;
	width: 100%;
	margin: auto;
}
.column{
	display: flex;
	flex-direction: column;
	justify-content: flex-start;
	align-content: stretch;
	flex-grow: 1;
}
.tile{
	margin: 4px;
}
.tile img{
    box-shadow: 0 1px 1px 2px rgba(0,0,0, .15);
    border-radius: 10px;
    width: 100%;
}

